Closed
Bug 1022140
Opened 11 years ago
Closed 11 years ago
Corruption on Flash videos at www.weather.com
Categories
(Core :: Graphics, defect)
Tracking
()
VERIFIED
FIXED
mozilla32
People
(Reporter: streetwolf52, Assigned: jwatt)
References
()
Details
(Keywords: regression, reproducible, Whiteboard: [fixed by partial backout of bug 965967])
User Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:32.0) Gecko/20100101 Firefox/32.0 (Beta/Release)
Build ID: 20140607033236
Steps to reproduce:
Play a video on www.weather.com. Example:
http://www.weather.com/special/great-outdoors/video/is-this-heavens-gate-49424?collid=/video-minutes/great-outdoors
Actual results:
Black boxes appear when video starts. Once the video begins hovering the mouse pointer over the video causes it to flicker.
Expected results:
Video should play with no corruption.
| Reporter | ||
Comment 1•11 years ago
|
||
Based on regression testing I've found that Bug 965967 is the probable cause. Turning off OMTC fixes the problem. Corruption doesn't happen on all Flash video sites. This bug might be graphic card/driver related.
Good: https://hg.mozilla.org/integration/mozilla-inbound/rev/7e7061043b85
Bad : https://hg.mozilla.org/integration/mozilla-inbound/rev/ca725c15bdeb
Graphics
--------
Adapter Description: AMD Radeon HD 7900 Series
Adapter Drivers: aticfx64 aticfx64 aticfx64 aticfx32 aticfx32 aticfx32 atiumd64 atidxx64 atidxx64 atiumdag atidxx32 atidxx32 atiumdva atiumd6a atitmm64
Adapter RAM: 3072
ClearType Parameters: D [ Gamma: 2200 Pixel Structure: R ClearType Level: 100 Enhanced Contrast: 50 ] D [ Gamma: 2200 Pixel Structure: R ClearType Level: 100 Enhanced Contrast: 50 ]
Device ID: 0x6798
Direct2D Enabled: true
DirectWrite Enabled: true (6.3.9600.16384)
Driver Date: 5-22-2014
Driver Version: 14.200.0.0
GPU #2 Active: false
GPU Accelerated Windows: 1/1 Direct3D 11 (OMTC)
Vendor ID: 0x1002
WebGL Renderer: Google Inc. -- ANGLE (AMD Radeon HD 7900 Series Direct3D9Ex vs_3_0 ps_3_0)
windowLayerManagerRemote: true
AzureCanvasBackend: direct2d
AzureContentBackend: direct2d
AzureFallbackCanvasBackend: cairo
AzureSkiaAccelerated: 0
Component: Untriaged → Graphics
Depends on: 965967
Keywords: regression
Product: Firefox → Core
Summary: Corruption on some Flash videos. → Corruption on Flash videos at www.weather.com
Comment 2•11 years ago
|
||
Confirming, setting OMTC to 'false' prevents the black boxes jumping around during start of video. I've not experienced this on other videos, at least none I've watched so far.
Win7 x64 here
Tested on m-c build cset:
https://hg.mozilla.org/mozilla-central/rev/62d33e3ba514
IE11 & Chrome play video normally without any small black boxes on start-up.
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Reporter | ||
Comment 3•11 years ago
|
||
Another video that also show corruption, though not as bad as on weather.com, is at cnn.com. Specifically, the video on the main page near the top left (Breaking News). Other videos appear to be OK.
Comment 4•11 years ago
|
||
I can confirm this issue on this page
http://trojmiasto.tv/Stary-film-z-gdanskiego-osiedla-8477.html
| Assignee | ||
Comment 5•11 years ago
|
||
Fixed by partial backout of bug 965967:
https://hg.mozilla.org/integration/mozilla-inbound/rev/45eeaf4173cd
Comment 6•11 years ago
|
||
Looks fixed in latest hourly.
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Whiteboard: [fixed by partial backout of bug 965967]
Comment 7•11 years ago
|
||
(In reply to Virtual_ManPL [:Virtual] from comment #6)
> Looks fixed in latest hourly.
What latest hourly ? An hourly from m-i ? Usually bugs are not marked 'Fixed', until it lands and sticks on m-c.
Comment 8•11 years ago
|
||
Hasn't merged to m-c yet.
Assignee: nobody → jwatt
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Comment 9•11 years ago
|
||
Status: REOPENED → RESOLVED
Closed: 11 years ago → 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
Comment 11•11 years ago
|
||
Reproduced with Nightly 2014-06-07 and STR from comment 0.
Verified as fixed with Firefox 32 beta 4 (Build ID: 20140804164216) on Windows 7 x64:
Mozilla/5.0 (Windows NT 6.1; WOW64; rv:32.0) Gecko/20100101 Firefox/32.0
Status: RESOLVED → VERIFIED
Keywords: verifyme
You need to log in
before you can comment on or make changes to this bug.
Description
•