Bug 1022140 - Fix corruption of Flash videos at www.weather.com etc. r=mattwoodrow